[project]
name = "RAP"
version = "0.1.0"
description = "Toxicology analysis and agent tools"
authors = [
  { name = "Kyu", email = "kyu@insilica.co" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-core",
    "langgraph",
    "agno",
    "python-dotenv",
    "requests",
    "aiohttp",
    "typing-extensions",
    "idna",
    "pubchempy",
    "httpx",
    "duckduckgo-search",
    "pydantic",
    "sqlalchemy",
    "numpy",
    "pandas",
    "openai",
    "google-genai",
    "langchain-google-genai",
    "bs4",
    "jsonschema"
]

